contrib/kubernetes/kustomize/overlays/mtls/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: simple-registry
  namespace: simple-registry
  annotations:
    ingress.cilium.io/tls-passthrough: "enabled"
    ingress.cilium.io/force-https: "true"
    # nginx ingress controller must have the --enable-ssl-passthrough set
    # to true in the command line arguments to support TLS passthrough
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: cr.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-registry
            port:
              number: 8000
  tls:
  - hosts:
    - cr.example.com
    secretName: server-tls-certificate
